# adventofcode

./: .day18.cpp.swp  .day7input.txt.swp  day1  day1.cpp  day10part2.cpp  day18.cpp  day2  day2part2.cpp  day2part2improved.cpp  day2part2v2  day3.cpp  day3part2.cpp  day4part2.cpp  day5p2  day6.cpp  day7.cpp  day8.cpp  day8part2.cpp  day9part2.cpp
2022/: day11.cpp  day2.cpp  day2part2  day2part2.cpp  day4  day4.cpp  day4part2  day5  day5.cpp  day5part2  day5part2.cpp  day9.cpp  day9part2.cpp  out.txt  test.out
2023/cpp/: day1  day1.cpp  day2  day2.cpp  out.txt  test.txt
2023/ocaml2023/: dune-project  ocaml2023.opam
2023/ocaml2023/lib/: dune  jolly.ml
2023/ocaml2023/test/: dune
2024/elixir/day1/lib/: day1.ex
2024/elixir/day1/test/: day1_test.exs
2024/elixir/day2/lib/: day2.ex
2024/elixir/day2/test/: day2_test.exs
2024/elixir/day3/: res.out
2024/elixir/day3/lib/: day3.ex
2024/elixir/day3/test/: day3_test.exs
2024/elixir/day4/: mix.exs
2024/elixir/day4/lib/: day4.ex
2024/elixir/day4/test/: day4_test.exs
2024/elixir/day5/: mix.exs
2024/elixir/day5/lib/: day5.ex
2024/elixir/day5/test/: day5_test.exs  day5input
2024/elixir/day6/: mix.exs
2024/elixir/day6/lib/: day6.ex
2024/elixir/day6/test/: day6_test.exs
2025/: mise.toml
2025/aoclixr/: .gitignore  README.md  mix.exs
2025/aoclixr/lib/: day.ex  day1.ex  day2.ex  util.ex
2025/aoclixr/test/: aoclixr_test.exs
