(lang dune 3.12)

(name ocaml2023)

(generate_opam_files true)

(source
 (github rudiejd/adventofcode))

(authors "JD Rudie")

(maintainers "JD Rudie")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml2023)
 (synopsis "Advent of code 2023")
 (description "Advent of code 2023 in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
